--- a/index.html
+++ b/index.html
@@ -163,32 +163,23 @@
       <div class="rule"></div>
 
       <p class="para">
-        I received my B.S. in Computer Science (2008–2012) and M.S. in Multimedia Engineering (2012–2014)
-        from National Chiao Tung University (now National Yang Ming Chiao Tung University).
-        In 2015, I was honored as a Phi Tau Phi member of the NCTU Chapter.
+        I am currently serving as an Analyst in the Information Management Section, Department of Comprehensive Development, Kinmen County Government. I received my B.S. in Computer Science (2008–2012) and M.S. in Multimedia Engineering (2012–2014) from National Chiao Tung University (now National Yang Ming Chiao Tung University). In 2015, I was honored as a Phi Tau Phi member of the NCTU Chapter.
       </p>
 
       <p class="para">
-        In the same year (2015), after passing Taiwan’s Local Government Civil Service Special Examination
-        (Information Processing), I began serving in the Penghu County Government.
+        In the same year (2015), after passing Taiwan’s Local Government Civil Service Special Examination (Information Processing), I began serving in the Penghu County Government.
       </p>
 
       <p class="para">
-        In 2017, I was admitted to Ph.D. programs in Electrical Engineering at both National Tsing Hua University
-        and National Chiao Tung University. However, in 2020, after careful reflection, I chose to withdraw,
-        recognizing that my enduring intellectual interests lay beyond pure coding and technical specialization.
+        In 2017, I was admitted to Ph.D. programs in Electrical Engineering at both National Tsing Hua University and National Chiao Tung University. However, in 2020, after careful reflection, I chose to withdraw, recognizing that my enduring intellectual interests lay beyond pure coding and technical specialization.
       </p>
 
       <p class="para">
-        In 2022, after passing Taiwan’s Senior Civil Service Examination (Information Processing), I continued
-        my public service career at the Kinmen County Government. In 2024, I again passed the Senior Civil Service
-        Examination in the same category but declined reassignment, choosing to remain in Kinmen.
+        In 2022, after passing Taiwan’s Senior Civil Service Examination (Information Processing), I continued my public service career at the Kinmen County Government. In 2024, I again passed the Senior Civil Service Examination in the same category but declined reassignment, choosing to remain in Kinmen.
       </p>
 
       <p class="para">
-        While remaining committed to public service, I have continued to pursue broader intellectual development.
-        I aim to integrate my background in computer engineering with legal inquiry. I am currently transitioning
-        toward legal studies, with the long-term goal of engaging in technology law.
+        While remaining committed to public service, I have continued to pursue broader intellectual development. I aim to integrate my background in computer engineering with legal inquiry. I am currently transitioning toward legal studies, with the long-term goal of engaging in technology law.
       </p>
 
       <p class="para">
