--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       <div class="rule"></div>
 
       <p class="para">
-        I am currently serving as an Analyst in the Information Management Section, Department of Comprehensive Development, Kinmen County Government. I received my B.S. in Computer Science (2008–2012) and M.S. in Multimedia Engineering (2012–2014) from National Chiao Tung University (now National Yang Ming Chiao Tung University). In 2015, I was honored as a Phi Tau Phi member of the NCTU Chapter.
+        I serve as an Analyst in the Information Management Section, Kinmen County Government. I hold a B.S. in Computer Science and an M.S. in Multimedia Engineering from National Chiao Tung University (2008–2014, now National Yang Ming Chiao Tung University) and was inducted into the Phi Tau Phi Scholastic Honor Society in 2015.
       </p>
 
       <p class="para">
