--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
       <div class="rule"></div>
 
       <p class="para">
-        I currently serve as an Analyst in the Information Management Section, Kinmen County Government. I hold a B.S. in Computer Science and an M.S. in Multimedia Engineering from National Chiao Tung University (2008–2014, now National Yang Ming Chiao Tung University) and was inducted into the Phi Tau Phi Scholastic Honor Society in 2015.
+        Currently serving as an Analyst in the Information Management Section, Kinmen County Government, I hold a B.S. in Computer Science and an M.S. in Multimedia Engineering from National Chiao Tung University (2008–2014, now National Yang Ming Chiao Tung University) and was inducted into the Phi Tau Phi Scholastic Honor Society in 2015.
       </p>
 
       <p class="para">
-        In the same year (2015), after passing Taiwan’s Local Government Civil Service Special Examination (Information Processing), I began serving in the Penghu County Government.
+        In 2015, after passing Taiwan’s Local Government Civil Service Special Examination (Information Processing), I began serving in the Penghu County Government.
       </p>
 
       <p class="para">
