--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       </p>
 
       <p class="para">
-        In 2015, after passing Taiwan’s Local Government Civil Service Special Examination (Information Processing), I began serving in the Penghu County Government.
+        In 2015, one year after completing my graduate studies, I passed Taiwan’s Local Government Civil Service Special Examination (Information Processing) and began serving in the Penghu County Government.
       </p>
 
       <p class="para">
