--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       </p>
 
       <p class="para">
-        In 2022, after passing Taiwan’s Senior Civil Service Examination (Information Processing), I continued my public service career at the Kinmen County Government. In 2024, I again passed the Senior Civil Service Examination in the same category but declined reassignment, choosing to remain in Kinmen.
+        In 2022, after passing Taiwan’s Senior Civil Service Examination (Information Processing), I continued my public service career at the Kinmen County Government. In 2024, I again passed the Senior Civil Service Examination in the same field but declined reassignment, choosing to remain in Kinmen.
       </p>
 
       <p class="para">
