--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
       <div class="photo">
         <!-- 把 profile.jpg 換成你的照片檔名（放在同一層） -->
-        <img src="Pasted image 20260219183003.png" alt="Profile photo" />
+        <!-- <img src="Pasted image 20260219183003.png" alt="Profile photo" />-->
         <div class="caption"></div>
       </div>
     </div>
