--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
 
       <div class="photo">
         <!-- 把 profile.jpg 換成你的照片檔名（放在同一層） -->
-        <!-- <img src="Pasted image 20260219183003.png" alt="Profile photo" />-->
-        <div class="caption"></div>
+        <!-- <img src="Pasted image 20260219183003.png" alt="Profile photo" />
+        <div class="caption"></div>-->
       </div>
     </div>
 
