--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
         </p>
       </div>
 
-      <div class="photo">
+      <!-- <div class="photo">-->
         <!-- 把 profile.jpg 換成你的照片檔名（放在同一層） -->
         <!-- <img src="Pasted image 20260219183003.png" alt="Profile photo" />
         <div class="caption"></div>-->
-      </div>
+      <!-- </div>-->
     </div>
 
     <!-- Bio -->
