--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       </p>
 
       <p class="para">
-        However, my professional aspirations extend beyond administrative advancement. While handling routine administrative duties in a government agency, I have actively pursued broader intellectual development, seeking to integrate my background in computer engineering with legal inquiry. I am now transitioning toward legal studies, with the long-term goal of engaging in technology law.
+        However, my professional aspirations extend beyond advancement within the civil service. While handling routine administrative duties in a government agency, I have actively pursued broader intellectual development, seeking to integrate my background in computer engineering with legal inquiry. I am now transitioning toward legal studies, with the long-term goal of engaging in technology law.
       </p>
 
       <p class="para">
