--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       </p>
 
       <p class="para">
-        In 2017, I was admitted to Ph.D. programs in Electrical Engineering at both National Tsing Hua University and National Chiao Tung University. However, in 2020, after careful reflection, I chose to withdraw, recognizing that my enduring intellectual interests were not confined to pure coding and technical specialization.
+        In 2017, I was admitted to Ph.D. programs in Electrical Engineering at both National Tsing Hua University and National Chiao Tung University. However, in 2020, after careful reflection, I chose to withdraw, recognizing that my enduring intellectual interests are not confined to pure coding and technical specialization.
       </p>
 
       <p class="para">
