--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       <div class="rule"></div>
 
       <p class="para">
-        Currently serving as an Analyst in the Information Management Section, Kinmen County Government, I received my B.S. in Computer Science and M.S. in Multimedia Engineering from National Chiao Tung University (2008–2014, now National Yang Ming Chiao Tung University) and was inducted into the Phi Tau Phi Scholastic Honor Society in 2015.
+        Currently serving as an Analyst in the Information Management Section, Kinmen County Government, I received my B.S. in Computer Science and M.S. in Multimedia Engineering from National Chiao Tung University (2008–2014, now National Yang Ming Chiao Tung University) and was inducted into the Phi Tau Phi Scholastic Honor Society, NCTU Chapter, in 2015.
       </p>
 
       <p class="para">
@@ -214,7 +214,7 @@
       <h2>Honor</h2>
       <div class="rule"></div>
       <ul>
-        <li>2015   Honorary Member, Phi Tau Phi Scholastic Honor Society National Chiao Tung University Chapter</li>
+        <li>2015   Honorary Member, Phi Tau Phi Scholastic Honor Society, National Chiao Tung University Chapter</li>
       </ul>
     </section>
 
